--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://www.seekpng.com/png/full/372-3729023_open-google-music-icon-png.png" />
+    <link rel="icon" href="https://res.cloudinary.com/dnzd8rvd4/image/upload/v1682424548/10474555_wg9zgv.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
